* BUG#8924 Fix the batch query to avoid multiple renewals

Version 2.0 - 2018-04-13
* BUG#7876 Modify the method that calculates the end date of the contracts in order to be able to reactivate void contract
* OTH#0000 Fix typo from commit 941d5db2

Version 1.14 - 2017-11-09
* BUG#5890 Fix contract end date calculation
* BUG#5980 Ensure the end date on terminated contacts is not overwritten
* BUG#7021 Do not allow to renew a contract when it has a final renewal defined

Version 1.12 - 2017-04-28
* FEA#0000 Adding the batch chain
Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Module creation